# EasyTier

./: Cargo.toml  pnpm-lock.yaml  register.json  rust-toolchain.toml
.github/workflows/: core.yml
easytier-agent/: Cargo.toml
easytier-agent/src/: config.rs  ip_monitor.rs  main.rs  process.rs  web_client.rs
easytier-web/frontend/: package.json  tailwind.config.js
easytier-web/frontend-lib/: package.json
easytier-web/frontend-lib/src/locales/: cn.yaml  en.yaml
easytier-web/frontend/src/: main.ts
easytier-web/frontend/src/components/: AgentList.vue  DeviceDetails.vue  MainPage.vue
easytier-web/frontend/src/modules/: api.ts  github-releases.ts  hostname-decrypt.ts
easytier-web/src/client_manager/: mod.rs
easytier-web/src/restful/: agent_api.rs  client_releases.rs  mod.rs
script/: build-easytier-web-embed.ps1
