[package]
name = "easytier-agent"
version = "2.6.4"
edition.workspace = true
description = "External agent for easytier that monitors IP changes, manages easytier-core, and communicates with easytier-web backend."

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive", "env"] }
uuid = { version = "1.5.0", features = ["v4"] }
rust-i18n = "3"
hostname = "0.4"
anyhow = "1.0"
